--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -41,6 +41,9 @@
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Midi2OSC.html">Midi2OSC</a>
                     </li>
+                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
+                        <a class="nav-link" href="VirtualGrid.html">VirtualGrid</a>
+                    </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
                         <a class="nav-link" href="Max_Intro.html">Max Intro</a>
                     </li>
