--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
                     <a class="nav-link" href="Midi2OSC.html">Midi2OSC</a>
                 </li>
+                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
+                    <a class="nav-link" href="VirtualGrid.html">VirtualGrid</a>
+                </li>
                 <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
                     <a class="nav-link" href="Max_Intro.html">Max Intro</a>
                 </li>
@@ -84,10 +87,9 @@
             A java adapter for OSC grids to communicate with monome grid apps
         </p>
     </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-VirtualGrid" hidden>
+    <div class="Home-Section-Container text-center" name="Home-Section-VirtualGrid">
         <h4>VirtualGrid</h4>
-        <!-- TODO: Update when new page created -->
-        <a href="CerealOSC.html">
+        <a href="VirtualGrid.html">
             <img src="./static/images/midiosc/midiosc-1.1.0(2).png" 
             class="home-card-image img-fluid d-block mx-auto">
         </a>
