Added image for CerealOSC on index

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
             <li class="breadcrumb-item active" aria-current="page">Home</li>
         </ol>
     </nav>
-    <!-- TODO: Fix image sizes -->
     <div class="Home-Section-Container text-center" name="Home-Section-CerealOSC">
-        <!-- TODO: Image -->
-        <h4>CerealOSC</h4>
         <a href="CerealOSC.html">
+            <img src="./static/images/cerealosc/CerealOSC.png" 
+            class="home-card-image img-fluid d-block mx-auto">
+        </a>
+        <h4>CerealOSC</h4>
             <p>
                 A java clone of the serialosc server
             </p>
-        </a>
     </div>
     <div class="Home-Section-Container text-center" name="Home-Section-Midi2OSC">
         <h4>Midi2OSC</h4>
