Updated CerealOSC.html to include info about old version

--- a/CerealOSC.html
+++ b/CerealOSC.html
@@ -114,7 +114,8 @@
                     </p>
                     <p>
                         Originally, CerealOSC was a GUI app that served both of these purposes. However, I have decided to release it as a Java module that
-                        can be used as a starting point for you to develop your own apps.
+                        can be used as a starting point for you to develop your own apps. The original version is still available in the repo as CerealOSC 
+                        1.1.1.
                     </p>
                 </div>
             </div>
