--- a/CerealOSC.html
+++ b/CerealOSC.html
@@ -72,6 +72,8 @@
             </div>
             <div class="card-body">
                 <h3 class="text-center">A serialosc clone written in Java</h3>
+                <img src="./static/images/cerealosc/CerealOSC.png" 
+                class="home-card-image img-fluid d-block mx-auto">
                 <p>
                     This is a hard fork of the serialosc server. We like puns and wordgames here, so we'll call it a soft spoon of CerealOSC.
                     CerealOSC is a Java implementation of the serialosc server. By itself, it doesn't do much. It is intended to be a starting
