Reverting to old desktop.html from before bad commit

--- a/desktop.html
+++ b/desktop.html
@@ -26,31 +26,20 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
-                </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="Midi2OSC.html">Midi2OSC</a>
-                </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="VirtualGrid.html">VirtualGrid</a>
+                    <a class="nav-link" href="About.html">About</a>
                 </li>
                 <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="Max_Intro.html">Max Intro</a>
+                    <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;chordophone&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="Chordophone.html">Chordophone</a>
+                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
+                    <a class="nav-link" href="Max.html">Max projects</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;diatonicpads&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
-                </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;liveclip&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="LiveClip.html">LiveClip</a>
-                </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;drd01&#39; else &#39;&#39; }}">
-                    <a class="nav-link" href="DRD01.html">DRD-01 Synth</a>
+                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;Patreon&#39; else &#39;&#39; }}">
+                    <a class="nav-link" href="Patreon.html">Patreon</a>
                 </li>
             </ul>
         </div>
