Shortened labels on DRD01.html so they fit on mobile devices better

--- a/DRD01.html
+++ b/DRD01.html
@@ -67,7 +67,7 @@
                 <div class="row mt-3">
                     <div class="col SubPanel" id="oscPanel" aria-labelledby="oscPanel">
                         <div class="oscRadios">
-                            <label class="oscLabel synth-param"><h6>Oscillator:</h6></label>
+                            <label class="oscLabel synth-param"><h6>Osc:</h6></label>
                             <input type="radio" id="oscButton0" name="oscRadios" value="osc0" checked>
                             <label class="oscLabel">1</label>
                             <input type="radio" id="oscButton1" name="oscRadios" value="osc1">
@@ -317,7 +317,7 @@
                     </div>
                     <div class="col SubPanel" id = "filterPanel" aria-labelledby="filterPanel" hidden>
                         <div class="filterRadios">
-                            <label><h6 class="filterLabel synth-param">Filter:</h6></label>
+                            <label><h6 class="filterLabel synth-param">Fltr:</h6></label>
                             <input type="radio" id="filterRadio0" name="filterRadios" value="filter0" checked>
                             <label class="filterLabel">1</label>
                             <input type="radio" id="filterRadio1" name="filterRadios" value="filter1">
@@ -493,7 +493,7 @@
                     </div>
                     <div class="col SubPanel" id="outputPanel" aria-labelledby="OutputPanel" hidden>
                         <div class="outputRadios">
-                            <label><h6 class="fx-label synth-param">Output:</h6></label>
+                            <label><h6 class="fx-label synth-param">Out:</h6></label>
                             <select name="outputMenu" id="outputMenu">
                                 <option value="Main">Main</option>
                                 <option value="Effects">Effects</option>
