--- a/DRD01.html
+++ b/DRD01.html
@@ -61,8 +61,8 @@
             <div class="MainPanel" id="MainPanel-small">
                 <div id="MainPanel-section-controls">
                     <button id="osc-tab">Osc</button>
-                    <button id="amp-tab">Filter</button>
-                    <button id="effects-tab">Output</button>
+                    <button id="amp-tab">Fltr</button>
+                    <button id="effects-tab">Out</button>
                 </div>
                 <div class="row mt-3">
                     <div class="col SubPanel" id="oscPanel" aria-labelledby="oscPanel">
