Removed card formatting and replaced with css styling

--- a/CerealOSC.html
+++ b/CerealOSC.html
@@ -66,11 +66,11 @@
                 <li class="breadcrumb-item active" aria-current="page">CerealOSC</li>
             </ol>
         </nav>
-        <div class="card mx-5 mb-5 justify-content-center">
-            <div class="card-header bg-dark text-light">
+        <div class="project">
+            <div class="project-title">
                 <h1 class="display-4 text-center">CerealOSC</h1>
             </div>
-            <div class="card-body">
+            <div class="project-description">
                 <h3 class="text-center">A serialosc clone written in Java</h3>
                 <img src="./static/images/cerealosc/CerealOSC.png" 
                 class="home-card-image img-fluid d-block mx-auto">
