--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -69,11 +69,11 @@
                 <li class="breadcrumb-item active" aria-current="page">DiatonicPads</li>
             </ol>
         </nav>
-        <div class="card mx-5 mb-5 justify-content-center">
-            <div class="card-header bg-dark text-light">
+        <div class="project">
+            <div class="project-title">
                 <h1 class="display-4 text-center">Diatonic pads</h1>
             </div>
-            <div class="card-body">
+            <div class="project-description">
                 <h3 class="text-center">Introduction</h3>
                 <div class="my-3">
                     <img src="./static/images/DiatonicPads/Diatonic-pads.png" class="home-card-image img-fluid d-block mx-auto">
