--- a/LiveClip.html
+++ b/LiveClip.html
@@ -21,7 +21,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./static/css/style.css">
-
         <title>SitStayCreate</title>
     </head>
     <body>
@@ -67,11 +66,11 @@
                 <li class="breadcrumb-item active" aria-current="page">LiveClip</li>
             </ol>
         </nav>
-        <div class="card mx-5 mb-5 justify-content-center">
-            <div class="card-header bg-dark text-light">
+        <div class="project">
+            <div class="project-title">
                 <h1 class="display-4 text-center">LiveClip</h1>
             </div>
-            <div class="card-body">
+            <div class="project-description">
                 <h3 class="text-center">Intro</h3>
                 <p>
                     This Max project is a Max for Live device. Max for Live is an add on for the Ableton Live music production environment.
