--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -70,11 +70,11 @@
                 <li class="breadcrumb-item active" aria-current="page">Max Intro</li>
             </ol>
         </nav>
-        <div class="card mx-5 mb-5">
-            <div class="card-header text-center bg-dark text-light">
+        <div class="project">
+            <div class="project-title">
                 <h1 class="display-4">Max/MSP</h1>
             </div>
-            <div class="card-body justify-content-center">
+            <div class="project-description">
                 <h3 class="text-center">Introduction</h3>
                 <div class="mx-5 my-3">
                     <div style="padding:81.47% 0 0 0;position:relative;">
