--- a/Midi2OSC.html
+++ b/Midi2OSC.html
@@ -65,11 +65,11 @@
                 <li class="breadcrumb-item active" aria-current="page">Midi2OSC</li>
             </ol>
         </nav>
-        <div class="card mx-5 mb-5 justify-content-center">
-            <div class="card-header bg-dark text-light">
+        <div class="project">
+            <div class="project-title">
                 <h1 class="display-4 text-center">Midi2OSC</h1>
             </div>
-            <div class="card-body">
+            <div class="project-description">
                 <div class="my-3">
                     <img src="./static/images/midiosc/midiosc-ssc.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
