--- a/VirtualGrid.html
+++ b/VirtualGrid.html
@@ -66,11 +66,11 @@
                 <li class="breadcrumb-item active" aria-current="page">VirtualGrid</li>
             </ol>
         </nav>
-        <div class="card mx-5 mb-5 justify-content-center">
-            <div class="card-header bg-dark text-light">
+        <div class="project">
+            <div class="project-title">
                 <h1 class="display-4 text-center">VirtualGrid</h1>
             </div>
-            <div class="card-body">
+            <div class="project-description">
                 <div style="padding:62.5% 0 0 0;position:relative;">
                     <iframe src="https://player.vimeo.com/video/572275423?h=5833fc89f4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="midiosc1.1.0-demo.mov"></iframe>
                 </div>
