--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -72,7 +72,7 @@
         </nav>
         <div class="project">
             <div class="project-title">
-                <h1 class="display-4">Max/MSP</h1>
+                <h1 class="display-4 text-center">Max/MSP</h1>
             </div>
             <div class="project-description">
                 <h3 class="text-center">Introduction</h3>
