Fixed mobile link in desktop

--- a/desktop.html
+++ b/desktop.html
@@ -541,7 +541,7 @@
         </div>
     </div>
     <div class="mx-5" id="version-link">
-        <a href="index.html">mobile version</a>
+        <a href="DRD01.html">mobile version</a>
     </div>
 </body>
 <footer>
