--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body>
     <!-- TODO: Navbar is different somehow than the rest except DRD01 - investigate -->
@@ -60,101 +61,103 @@
             <li class="breadcrumb-item active" aria-current="page">Home</li>
         </ol>
     </nav>
-    <div class="Home-Section-Container text-center" name="Home-Section-CerealOSC">
-        <h4>CerealOSC</h4>
-        <a href="CerealOSC.html">
-            <img src="./static/images/cerealosc/CerealOSC.png" 
-            class="home-card-image img-fluid d-block mx-auto">
-        </a>
-        <p>
-            A java clone of the serialosc server
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-Midi2OSC">
-        <h4>Midi2OSC</h4>
-        <a href="Midi2OSC.html">
-            <img src="./static/images/midiosc/midiosc-ssc.png" 
-            class="home-card-image img-fluid d-block mx-auto">
-        </a>
-        <p>
-            A java adapter for midi grids to communicate with monome grid apps
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-OSC2OSC" hidden>
-        <h4>OSC2OSC</h4>
-        <!-- TODO: Image -->
-        <p>
-            A java adapter for OSC grids to communicate with monome grid apps
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-VirtualGrid">
-        <h4>VirtualGrid</h4>
-        <a href="VirtualGrid.html">
-            <img src="./static/images/midiosc/midiosc-1.1.0(2).png" 
-            class="home-card-image img-fluid d-block mx-auto">
-        </a>
-
-        <p>
-            A basic java implementation of a Virtual Monome grid
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-MaxExternals" hidden>
-        <h4>MaxExternals</h4>
-        <!-- TODO: Image -->
-        <p>
-            A suite of Max/MSP externals (Max/MSP objects that extend the Max/MSP 
-            programming language)
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-MaxIntro">
-        <h4>MaxIntro</h4>
-        <a href="Max_Intro.html">
-            <img src="./static/images/Max/max_intro.png"
-            class="home-card-image img-fluid d-block mx-auto"> 
-        </a>
-        <p>
-            A brief intro on the Max/MSP programming environment
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-DiatonicPads">
-        <h4>DiatonicPads</h4>
-        <a href="DiatonicPads.html">
-            <img src="./static/images/DiatonicPads/Diatonic-pads.png" 
-            class="home-card-image img-fluid d-block mx-auto">
-        </a>
-        <p>
-            A Max/MSP project to extend a 4x4 pad controller
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-Chordophone">
-        <h4>Chordophone</h4>
-        <a href="Chordophone.html">
-            <img src="./static/images/Chordophone/chordophone.png" 
-            class="home-card-image img-fluid d-block mx-auto">
-        </a>
-        <p>
-            A Max/MSP project for the Monome Grid
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-LiveClip">
-        <h4>LiveClip</h4>
-        <a href="LiveClip.html">
-            <img src="./static/images/LiveClip/liveclip.png"
-            class="home-card-image img-fluid d-block mx-auto">
-        </a>
-        <p>
-            A Max4Live project for the Monome Grid
-        </p>
-    </div>
-    <div class="Home-Section-Container text-center" name="Home-Section-DRD01">
-        <h4>DRD01</h4>
-        <a href="DRD01.html">
-            <img src="./static/images/DRD01/DRD01.png"
-            class="home-card-image img-fluid d-block mx-auto">
-        </a>
-        <p>
-            Touchstrip browser synth - built with tone.js library
-        </p>
+    <div class="home">
+        <div class="Home-Section-Container text-center" name="Home-Section-CerealOSC">
+            <h4>CerealOSC</h4>
+            <a href="CerealOSC.html">
+                <img src="./static/images/cerealosc/CerealOSC.png" 
+                class="home-card-image img-fluid d-block mx-auto">
+            </a>
+            <p>
+                A java clone of the serialosc server
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-Midi2OSC">
+            <h4>Midi2OSC</h4>
+            <a href="Midi2OSC.html">
+                <img src="./static/images/midiosc/midiosc-ssc.png" 
+                class="home-card-image img-fluid d-block mx-auto">
+            </a>
+            <p>
+                A java adapter for midi grids to communicate with monome grid apps
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-OSC2OSC" hidden>
+            <h4>OSC2OSC</h4>
+            <!-- TODO: Image -->
+            <p>
+                A java adapter for OSC grids to communicate with monome grid apps
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-VirtualGrid">
+            <h4>VirtualGrid</h4>
+            <a href="VirtualGrid.html">
+                <img src="./static/images/midiosc/midiosc-1.1.0(2).png" 
+                class="home-card-image img-fluid d-block mx-auto">
+            </a>
+    
+            <p>
+                A basic java implementation of a Virtual Monome grid
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-MaxExternals" hidden>
+            <h4>MaxExternals</h4>
+            <!-- TODO: Image -->
+            <p>
+                A suite of Max/MSP externals (Max/MSP objects that extend the Max/MSP 
+                programming language)
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-MaxIntro">
+            <h4>MaxIntro</h4>
+            <a href="Max_Intro.html">
+                <img src="./static/images/Max/max_intro.png"
+                class="home-card-image img-fluid d-block mx-auto"> 
+            </a>
+            <p>
+                A brief intro on the Max/MSP programming environment
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-DiatonicPads">
+            <h4>DiatonicPads</h4>
+            <a href="DiatonicPads.html">
+                <img src="./static/images/DiatonicPads/Diatonic-pads.png" 
+                class="home-card-image img-fluid d-block mx-auto">
+            </a>
+            <p>
+                A Max/MSP project to extend a 4x4 pad controller
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-Chordophone">
+            <h4>Chordophone</h4>
+            <a href="Chordophone.html">
+                <img src="./static/images/Chordophone/chordophone.png" 
+                class="home-card-image img-fluid d-block mx-auto">
+            </a>
+            <p>
+                A Max/MSP project for the Monome Grid
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-LiveClip">
+            <h4>LiveClip</h4>
+            <a href="LiveClip.html">
+                <img src="./static/images/LiveClip/liveclip.png"
+                class="home-card-image img-fluid d-block mx-auto">
+            </a>
+            <p>
+                A Max4Live project for the Monome Grid
+            </p>
+        </div>
+        <div class="Home-Section-Container text-center" name="Home-Section-DRD01">
+            <h4>DRD01</h4>
+            <a href="DRD01.html">
+                <img src="./static/images/DRD01/DRD01.png"
+                class="home-card-image img-fluid d-block mx-auto">
+            </a>
+            <p>
+                Touchstrip browser synth - built with tone.js library
+            </p>
+        </div>
     </div>
 </body>
 <footer>
