--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -22,7 +22,6 @@
         <link rel="stylesheet" href="./static/css/style.css">
     </head>
     <body>
-        
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
@@ -72,7 +71,7 @@
             <div class="project-description">
                 <h3 class="text-center">Introduction</h3>
                 <div class="my-3">
-                    <img src="./static/images/DiatonicPads/Diatonic-pads.png" class="home-card-image img-fluid d-block mx-auto">
+                    <img src="./static/images/DiatonicPads/Diatonic-pads.png" class="img-fluid d-block mx-auto">
                 </div>
                 <p>
                     This project is a Max/MSP patch that extends the functionality of a velocity sensitive 4x4 pad controller as a melodic instrument. It should work with any 4x4 MIDI
