--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="Midi2OSC.html">Midi2OSC</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="VirtualGrid.html">VirtualGrid</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="Max_Intro.html">Max Intro</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;chordophone&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="Chordophone.html">Chordophone</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;diatonicpads&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;liveclip&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="LiveClip.html">LiveClip</a>
                 </li>
-                <li class="nav-item {{ &#39;active&#39; if active_page == &#39;drd01&#39; else &#39;&#39; }}">
+                <li class="nav-item">
                     <a class="nav-link" href="DRD01.html">DRD-01 Synth</a>
                 </li>
             </ul>
