Introduced dropdowns to navbar

--- a/Midi2OSC.html
+++ b/Midi2OSC.html
@@ -37,20 +37,25 @@
                     <li class="nav-item">
                         <a class="nav-link" href="VirtualGrid.html">VirtualGrid</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Max_Intro.html">Max Intro</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Max/MSP
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="Max_Intro.html">Max Intro</a>
+                            <a class="dropdown-item" href="Chordophone.html">Chordophone</a>
+                            <a class="dropdown-item" href="DiatonicPads.html">DiatonicPads</a>
+                            <a class="dropdown-item" href="LiveClip.html">LiveClip</a>
+                        </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Chordophone.html">Chordophone</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="LiveClip.html">LiveClip</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="DRD01.html">DRD-01 Synth</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            DRD-01 Synth
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="desktop.html">Desktop</a>
+                            <a class="dropdown-item" href="DRD01.html">Mobile</a>
+                        </div>
                     </li>
                 </ul>
             </div>
