--- a/DiatonicPadsM.html
+++ b/DiatonicPadsM.html
@@ -25,34 +25,37 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Midi2OSC.html">Midi2OSC</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="VirtualGrid.html">VirtualGrid</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Max_Intro.html">Max Intro</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Chordophone.html">Chordophone</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="LiveClip.html">LiveClip</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="DRD01.html">DRD-01 Synth</a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="CerealOSC.html">CerealOSC</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Midi2OSC.html">Midi2OSC</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="VirtualGrid.html">VirtualGrid</a>
+                </li>
+                <li class="nav-item active dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Max/MSP
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="Max_Intro.html">Max Intro</a>
+                        <a class="dropdown-item" href="Chordophone.html">Chordophone</a>
+                        <a class="dropdown-item" href="DiatonicPads.html">DiatonicPads</a>
+                        <a class="dropdown-item" href="LiveClip.html">LiveClip</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        DRD-01 Synth
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="desktop.html">Desktop</a>
+                        <a class="dropdown-item" href="DRD01.html">Mobile</a>
+                    </div>
+                </li>
+            </ul>
         </nav>
         
         <nav aria-label="breadcrumb">
