--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -30,16 +30,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Max/MSP
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="Max_Intro.html">Max Intro</a>
-                            <a class="dropdown-item" href="Chordophone.html">Chordophone</a>
-                            <a class="dropdown-item" href="DiatonicPads.html">DiatonicPads</a>
-                            <a class="dropdown-item" href="LiveClip.html">LiveClip</a>
-                        </div>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="Max_Intro.html">Max Intro</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Chordophone.html">Chordophone</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="LiveClip.html">LiveClip</a>
                     </li>
                 </ul>
             </div>
