--- a/Chordophone.html
+++ b/Chordophone.html
@@ -30,8 +30,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="Max_Intro.html">Max Intro</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Chordophone.html active">Chordophone</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="Chordophone.html">Chordophone</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
