Removed old JS and updated font size for Max_Into

--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -48,7 +48,7 @@
                 <h4 class="display-4 text-center">Max/MSP</h4>
             </div>
             <div class="project-description">
-                <div>
+                <div class="tutorial-text-size">
                     <p>
                         What is Max/MSP? Max/MSP is a visual programming language for processing audio and video. It might be somewhat confusing
                         for the average person to grok at first since it is is best known as tool for artists working in niche domains like noise or glitch art.
