Updated font size, removed headings, and removed deprecated CerealOSC information

--- a/Chordophone.html
+++ b/Chordophone.html
@@ -43,16 +43,13 @@
             <div class="project-title">
                 <h1 class="display-4 text-center">Chordophone</h1>
             </div>
-            <div class="project-description">
-                <h3 class="text-center">Intro</h3>
+            <div class="project-description tutorial-text-size">
                 <div class="my-3">
                     <img src="./static/images/Chordophone/chordophone.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
                 <p>
-                    This patch is to be used with a Grid controller, specifically one with 128 buttons oriented horizontally. If you do
-                    not have a Grid controller, our app CerealOSC will allow you to use this patch with your mouse with CerealOSC v1.1.0.
+                    This patch is to be used with a Grid controller, specifically one with 128 buttons oriented horizontally.
                 </p>
-                <h3 class="text-center">Manual</h3>
                 <p>
                     A chordophone is in the simplest sense, a stringed instrument. Guitars, zithers, harps, lutes, etc. are all examples
                     of chordophones. This patch aspires to provide a similar feel to using a dulcimer and an autoharp, but maybe lands
@@ -63,7 +60,10 @@
                 </div>
                 <p>
                     The top row provides global functionality and tunes the two instruments to a note (buttons [0 0]-[11 0] A-G#) and
-                    either the Ionian, Aeolian, or Dorian mode (buttons [12 0]-[14 0]). The instrument will also allow you to switch
+                    either the Ionian, Aeolian, or Dorian mode (buttons [12 0]-[14 0]). 
+                </p>
+                <p>
+                    The instrument will also allow you to switch
                     between two selected modes by toggling button [15 0]. This will give you the flexibility to change keys on the fly
                     during a performance.
                 </p>
@@ -73,6 +73,8 @@
                 </p>
                 <p>
                     The repo for chordophone can be found here: <a href="https://github.com/SitStayCreate/Chordophone">https://github.com/SitStayCreate/Chordophone</a>.
+                </p>
+                <p>
                     Special thanks to Derek Cohen for his guidance on this project.
                 </p>
             </div>
