Updated font size and removed headings

--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -44,8 +44,7 @@
             <div class="project-title">
                 <h1 class="display-4 text-center">Diatonic pads</h1>
             </div>
-            <div class="project-description">
-                <h3 class="text-center">Introduction</h3>
+            <div class="project-description tutorial-text-size">
                 <div class="my-3">
                     <img src="./static/images/DiatonicPads/Diatonic-pads.png" class="img-fluid d-block mx-auto">
                 </div>
@@ -54,7 +53,6 @@
                     controller with minor configuration of the MIDI note values. If you're unfamiliar with Max/MSP, we have a short introduction we recommend reading
                     first.
                 </p>
-                <h3 class="text-center">Manual</h3>
                 <p>
                     Open a Web Browser and navigate to <a href="https://github.com/SitStayCreate/DiatonicPads">https://github.com/SitStayCreate/DiatonicPads</a>.
                     Download the file 4x4_Tools.maxzip and open the project with Max/MSP. This project was built using Max 7. It probably will work
