--- a/LiveClip.html
+++ b/LiveClip.html
@@ -44,8 +44,7 @@
             <div class="project-title">
                 <h1 class="display-4 text-center">LiveClip</h1>
             </div>
-            <div class="project-description">
-                <h3 class="text-center">Intro</h3>
+            <div class="project-description tutorial-text-size">
                 <p>
                     This Max project is a Max for Live device. Max for Live is an add on for the Ableton Live music production environment.
                     Ableton Live is the brainchild of Monolake's Robert Henke. It can serve many purposes from digital audio workstation (DAW)
@@ -60,19 +59,15 @@
                     the notes used in the project.
                 </p>
                 <p>
-                    This patch is to be used with a Grid, specifically one with 128 buttons oriented horizontally. If you do
-                    not have a Grid, our app midiosc will allow you to use this patch with a Midi controller or
-                    with your mouse with CerealOSC v1.1.0.
+                    This patch is to be used with a Grid, specifically one with 128 buttons oriented horizontally.
                 </p>
                 <div class="my-3">
                     <img src="./static/images/LiveClip/liveclip.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
-                <h3 class="text-center">Instructions</h3>
                 <p>
                     LiveClip is an X0X style 16 step sequencer. It takes an Ableton Live Clip and uses it as storage for the sequencer. It will load seven
                     target notes from a highlighted clip and will display them on the grid as lit buttons.
                 </p>
-                <h5 class="text-center">Note Mode</h5>
                 <div class="my-3">
                     <img src="./static/images/LiveClip/notemode.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
@@ -81,7 +76,6 @@
                     will change the mode from Note mode to Velo mode. More on this in the next section. Buttons [0 1] - [15 7] edit the notes in the highlighted
                     clip. The notes that it selects and edits can be set from the UI in the patch.
                 </p>
-                <h5 class="text-center">Velo Mode</h5>
                 <div class="my-3">
                     <img src="./static/images/LiveClip/velomode.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
