--- a/LiveClip.html
+++ b/LiveClip.html
@@ -85,7 +85,7 @@
                     note [0 0] - [15 7]. Velocities are set for entire columns (one per step).
                 </p>
                 <p>
-                    The repo for liveclip can be found here: <a href="https://github.com/SitStayCreate/LiveClip">https://github.com/SitStayCreate/LiveClip</a>.
+                    The repo for LiveClip can be found here: <a href="https://github.com/SitStayCreate/LiveClip">https://github.com/SitStayCreate/LiveClip</a>.
                 </p>
             </div>
         </div>
