Enlarged breadcrumb font-size

--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -38,7 +38,7 @@
 
         
         <nav aria-label="breadcrumb">
-            <ol class="breadcrumb bg-white">
+            <ol class="breadcrumb bg-white bread-crumb-font-size">
                 <li class="breadcrumb-item" aria-current="page"><a href="www.sitstaycreate.com">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Max Intro</li>
             </ol>
