--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </nav>
 
     <nav aria-label="breadcrumb">
-        <ol class="breadcrumb bg-white">
-            <li class="breadcrumb-item active" aria-current="page">Home</li>
+        <ol class="breadcrumb bg-white bread-crumb-font-size">
+            <li class="breadcrumb-item active bread-crumb-font-size" aria-current="page">Home</li>
         </ol>
     </nav>
     <div class="home">
