--- a/LiveClip.html
+++ b/LiveClip.html
@@ -35,7 +35,7 @@
 
         
         <nav aria-label="breadcrumb">
-            <ol class="breadcrumb bg-white">
+            <ol class="breadcrumb bg-white bread-crumb-font-size">
                 <li class="breadcrumb-item" aria-current="page"><a href="https://sitstaycreate.github.io/">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">LiveClip</li>
             </ol>
