Removed Bootstrap4 from navbar - using custom CSS now

--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -13,7 +13,26 @@
     <body>
         
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav>
+            <ul class="nav-bar">
+                <li class="nav-bar-list-item">
+                    <a class="nav-bar-list-logo" href="www.sitstaycreate.com">SitStayCreate</a>
+                </li>
+                <li class="nav-bar-list-item">
+                    <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
+                </li>
+                <li class="nav-bar-list-item">
+                    <a class="nav-bar-list-link" href="Chordophone.html">Chordophone</a>
+                </li>
+                <li class="nav-bar-list-item">
+                    <a class="nav-bar-list-link" href="DiatonicPads.html">DiatonicPads</a>
+                </li>
+                <li class="nav-bar-list-item">
+                    <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,7 +53,7 @@
                     </li>
                 </ul>
             </div>
-        </nav>
+        </nav> -->
 
         
         <nav aria-label="breadcrumb">
