--- a/index.html
+++ b/index.html
@@ -10,28 +10,24 @@
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body>
-    <!-- TODO: Navbar is different somehow than the rest except DRD01 - investigate -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="Max_Intro.html">Max Intro</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Chordophone.html">Chordophone</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="LiveClip.html">LiveClip</a>
-                </li>
-            </ul>
-        </div>
+    <nav>
+        <ul class="nav-bar">
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-logo" href="www.sitstaycreate.com">SitStayCreate</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link" href="Chordophone.html">Chordophone</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link" href="DiatonicPads.html">DiatonicPads</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
+            </li>
+        </ul>
     </nav>
 
     <nav aria-label="breadcrumb">
