--- a/DRD01.html
+++ b/DRD01.html
@@ -11,35 +11,24 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Max/MSP
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="Max_Intro.html">Max Intro</a>
-                        <a class="dropdown-item" href="Chordophone.html">Chordophone</a>
-                        <a class="dropdown-item" href="DiatonicPads.html">DiatonicPads</a>
-                        <a class="dropdown-item" href="LiveClip.html">LiveClip</a>
-                    </div>
-                </li>
-                <li class="nav-item active dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        DRD-01 Synth
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="desktop.html">Desktop</a>
-                        <a class="dropdown-item" href="DRD01.html">Mobile</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+    <nav>
+        <ul class="nav-bar">
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-logo" href="www.sitstaycreate.com">SitStayCreate</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link" href="Chordophone.html">Chordophone</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link" href="DiatonicPads.html">DiatonicPads</a>
+            </li>
+            <li class="nav-bar-list-item">
+                <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
+            </li>
+        </ul>
     </nav>
 
     <div class="card mt-3 mx-5 drd-01-synth" id="drd-01-synth-small">
