Fixed broken link in navbar

--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -14,7 +14,7 @@
         <nav>
             <ul class="nav-bar">
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-logo" href="www.sitstaycreate.com">SitStayCreate</a>
+                    <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
                 </li>
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
@@ -30,7 +30,7 @@
                 </li>
             </ul>
         </nav>
-        
+
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white bread-crumb-font-size">
                 <li class="breadcrumb-item" aria-current="page"><a href="https://sitstaycreate.github.io/">Home</a></li>
