--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -16,7 +16,7 @@
         <nav>
             <ul class="nav-bar">
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-logo" href="www.sitstaycreate.com">SitStayCreate</a>
+                    <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
                 </li>
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
