Fixed active tag in navbar, deleted old file

--- a/DiatonicPads.html
+++ b/DiatonicPads.html
@@ -23,7 +23,7 @@
                     <a class="nav-bar-list-link" href="Chordophone.html">Chordophone</a>
                 </li>
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-link" href="DiatonicPads.html">DiatonicPads</a>
+                    <a class="nav-bar-list-link nav-bar-active" href="DiatonicPads.html">DiatonicPads</a>
                 </li>
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
