--- a/LiveClip.html
+++ b/LiveClip.html
@@ -16,7 +16,7 @@
                     <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
                 </li>
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
+                    <a class="nav-bar-list-link" href="Max_Intro.html">Max Intro</a>
                 </li>
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-link" href="Chordophone.html">Chordophone</a>
@@ -25,7 +25,7 @@
                     <a class="nav-bar-list-link" href="DiatonicPads.html">DiatonicPads</a>
                 </li>
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
+                    <a class="nav-bar-list-link nav-bar-active" href="LiveClip.html">LiveClip</a>
                 </li>
             </ul>
         </nav>
