--- a/Max_Intro_Test.html
+++ b/Max_Intro_Test.html
@@ -11,12 +11,10 @@
         <script src="https://player.vimeo.com/api/player.js"></script>
     </head>
     <body>
-        
-
         <nav>
-            <ul class="nav-bar">
+            <ul class="nav-bar" id="list-container">
                 <li class="nav-bar-list-item">
-                    <a class="nav-bar-list-logo" href=".">SitStayCreate</a>
+                    <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
                 </li>
                 <li class="nav-bar-list-item">
                     <a class="nav-bar-list-link nav-bar-active" href="Max_Intro.html">Max Intro</a>
@@ -31,34 +29,31 @@
                     <a class="nav-bar-list-link" href="LiveClip.html">LiveClip</a>
                 </li>
             </ul>
+            <ul class="nav-bar" id="button-container">
+                    <li class="nav-bar-list-item">
+                        <canvas id="myCanvas" class="hamburger-button">
+                        </canvas>
+                    </li>
+                <li class="nav-bar-list-item">
+                    <a class="nav-bar-list-logo" href="/">SitStayCreate</a>
+                </li>
+            </ul>
         </nav>
-        <!-- <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="Max_Intro.html">Max Intro</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Chordophone.html">Chordophone</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="DiatonicPads.html">DiatonicPads</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="LiveClip.html">LiveClip</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> -->
-
+        <script>
+            var listContainer = document.getElementById("list-container");
+            var buttonContainer = document.getElementById("button-container");
+            if(window.screen.availWidth < 600){
+                console.log("show button container")
+                listContainer.hidden = "true";
+            } else {
+                console.log("show list container")
+                buttonContainer.hidden="true";
+            }
+        </script>
         
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white bread-crumb-font-size">
-                <li class="breadcrumb-item" aria-current="page"><a href="www.sitstaycreate.com">Home</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="/">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Max Intro</li>
             </ol>
         </nav>
